--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,36 +1,38 @@
 *{
     list-style: none;
+    top: 0;
+    left: 0;
+    margin: 0;
 }
 
 .head{
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-    background: #424232;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    color: white;
-}
-.arrow-icon {
-  color:white;
-  width: 10px;
-  position: relative;
-  top: 2px;
+  position: fixed;       /* keeps it visible when scrolling */
+  top: 0;                /* stick to the top */
+  left: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5px;
+  background: #424232;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  color: white;
+  z-index: 1000;   
 }
 
 .left{
     display: flex;
     align-items: center;
     gap: 80px;
+    padding: 20px;
 }
 
 .nav {
     display: flex;
     position: relative;
     left: 40vh;
-    gap: 30px;
+    gap: 50px;
     margin: 0;
     padding: 0;
 }
@@ -49,13 +51,27 @@
     transition: all 0.3s ease;
 }
 
-.nav li a:hover {
-    background: #f0f0f0;
-    color: #007bff;
-}
+
+
 
 .right{
-  color: #007bff;
+   
+    width: 20vh;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 20px;
+ 
+}
+.icons{
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+   
+}
+.left p {
+    font-weight: bold;
+    font-size: 20px;
 }
 
 
@@ -81,6 +97,3 @@
   transition: color 0.3s;
 }
 
-.search-icon:hover {
-  color: #007bff;
-}
