--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 5px;
-  background: #424232;
+  background-color: #52796F;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   color: white;
   z-index: 1000;   
@@ -26,6 +26,7 @@
     align-items: center;
     gap: 80px;
     padding: 20px;
+ 
 }
 
 .nav {
@@ -36,6 +37,7 @@
     margin: 0;
     padding: 0;
 }
+    
 
 .nav li {
     margin: 0;
